emogrifier 4.0.1, 2020-09-20
----------------------------
- Update documentation.
- Version requirement.

emogrifier 4.0.0, 2020-09-20
----------------------------
- Update documentation.
- Update emogrifier to version 4.0.0.
- Drop support of non-composer installations.
- Drop support of TYPO3 8 LTS, add support for TYPO3 10 LTS.

emogrifier 3.0.0, 2019-09-21
----------------------------
- Update documentation.
- Update emogrifier to version 2.2.0.
- Remove deprecated replace statement from composer.json.
- Remove support of TYPO3 7 LTS, add support for TYPO3 9 LTS.
- Add pack script for TER upload.
- Replace GeneralUtility::requireOnce().

emogrifier 2.0.0, 2018-04-20
----------------------------
- Update documentation.
- Add view helper.
- Add user function.
- Add option to extract content.
- Update emogrifier to V2.0.0.
- Update integration of emogrifier.
- Remove compatibility with TYPO3 6.2.
- Reformat code.

emogrifier 1.1.1, 2017-09-23
----------------------------
- Update documentation.

emogrifier 1.1.0, 2017-09-23
----------------------------
- Update documentation.
- Update emogrifier to V1.2.0.
- Compatibility with TYPO3 8.7.

emogrifier 1.0.1, 2016-08-05
----------------------------
- Compatibility with TYPO3 6.2.

emogrifier 1.0.0, 2016-07-28
----------------------------
- Initial release.