@@ -3,18 +3,21 @@ $EM_CONF[$_EXTKEY] = [
     'title' => 'Emogrifier',
     'description' => 'Converts CSS styles into inline HTML styles.',
     'category' => 'fe',
-    'version' => '4.0.1',
+    'clearCacheOnLoad' => true,
+    'version' => '5.0.0',
     'state' => 'stable',
-    'uploadfolder' => 0,
-    'createDirs' => '',
-    'clearCacheOnLoad' => 0,
     'author' => 'Gernot Leitgab',
     'author_company' => 'Webentwickler.at',
     'constraints' => [
         'depends' => [
-            'typo3' => '9.5.0-10.4.99',
+            'typo3' => '10.4.0-11.5.99',
         ],
         'conflicts' => [],
         'suggests' => [],
+    ],
+    'autoload' => [
+        'psr-4' => [
+            'WebentwicklerAt\\Emogrifier\\' => 'Classes'
+        ]
     ],
 ];
